YUK-20526 Create system groups for Remote C&I Meter Programming
Code review changes / improvements to SQL statements